TEST_PROGRAMS/INVALID/09/blank_exp.go
package blank_funcexp

func main() {
    var (
        i _
    )
}
